-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0
-
None
-
3
-
19ca03c21 (dev), ed739a5c4 (6.5), 5679f9f82 (dev), 2f96d72f4 (6.5)
-
Foundation Sprint 73
The facilities in qunicodetools.cpp are not limited to the GUI thread, so they need to be re-entrant.
Besides QTBUG-105543 there is another threading issue in qunicodetools' thai support: The th_brk() function is apparently not re-entrant, so https://github.com/tlwg/libthai/pull/1 (available from symbol version 0.1.25) added a new, thread-safe, API where the initialization of global state is explicit (and must be protected by the user with a mutex), but following calls to the th_brk replacement are then thread-safe.
We should port to the new API. If we don't find it, emit qWarning() and continue to use the old API.
- depends on
-
QTBUG-106360 qunicodetools.cpp: libthai's th_brk is not thread-safe [1/2]: try fix using old API
-
- Closed
-
- resulted from
-
QTBUG-103531 Finish migration to qsizetype [qtbase/src/corelib/text]
-
- Closed
-
For Gerrit Dashboard: QTBUG-105544 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
452759,3 | QUnicodeTools: Use thread-safe libthai API | dev | qt/qtbase | Status: MERGED | +2 | 0 |
453683,9 | QUnicodeTools: Use a global static to manage libthai state | dev | qt/qtbase | Status: MERGED | +2 | 0 |
454072,2 | QUnicodeTools: Use thread-safe libthai API | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
454444,2 | QUnicodeTools: Use a global static to manage libthai state | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |